--- a/P-168/index.html
+++ b/P-168/index.html
@@ -49,13 +49,13 @@
         <a-plane position = "0 0.89 0.02" width = "1.49" height = "0.3" rotation = "0 0 0" color = "#F0C30F">
 
           <a-entity position = "0 0 0.1" rotation = "0 0 0" 
-          text = "font : monoid ; value : Construction Crane ; color : black ; width : 1.8 ; height : 1 ; align : center"></a-entity>
+          text = "font : monoid ; value : Hydraulic Crane ; color : black ; width : 1.8 ; height : 1 ; align : center"></a-entity>
 
         </a-plane>
 
         <a-entity position = "0 0 0.1" rotation = "0 0 0"
           text = "color : black ; align : center ; width : 2 ; font : monoid ; 
-            value : Tomato Sauce\n\nMozzarella Cheese\n\nParmesan Cheese (Optional)\n\nFresh Besal\n\nOlive Oil\n\nBlack Pepper (Optional)"></a-entity>
+            value : PULL BACK AND GO : Friction powered/n/crane truck toy , 360-degree rotating /n/left and right, machine can pull up /n/& down, swing left & right . High /n/Qualtiy Material : FunBlast crane toy /n/is made of 100% high-quality abs /n/plastics and mtal shovel which is /n/durable, light and Non-Toxic with /n/ strong crash resistance. /n/AGE : 8-10yrs"></a-entity>
 
       </a-plane>
 
