--- a/index.html
+++ b/index.html
@@ -1,95 +1,178 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>AR Toy Store</title>
+    <!-- we import arjs version without NFT but with marker + location based support -->
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
 
-<head>
-  <title>Ar Toy Store</title>
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-  <!-- We import arjs version without NFT but with marker + location based support -->
-  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
+    <!-- Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
 
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Include the above in your HEAD tag -->
 
-  <!-- Sweetalert -->
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+    <!-- sweetalert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+    <script>
+      var firebaseConfig = {
+        apiKey: "AIzaSyDcMs4RRTSgw2x5qRilNDjMCz0lsDL-SEY",
+        authDomain: "ar-toy-store.firebaseapp.com",
+        projectId: "ar-toy-store",
+        storageBucket: "ar-toy-store.appspot.com",
+        messagingSenderId: "730692904949",
+        appId: "1:730692904949:web:0f72a095af54503028a2bc",
+        measurementId: "G-WB8D6DY4VW"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
+    <!-- Local StyleSheet -->
+    <link href="./style.css" rel="stylesheet" />
+    <script src="./js/addMarkers.js"></script>
+    <script src="./js/markerhandler.js"></script>
+    <script src="./js/addButtons.js"></script>
+    <script src="./js/stars.js"></script>
+  </head>
+  <body style="margin : 0px; overflow: hidden;">
+    <a-scene
+      id="main-scene"
+      vr-mode-ui="enabled: false"
+      embedded
+      arjs="sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960;debugUIEnabled: false;"
+      gesture-detector
+      createmarkers
+      createbuttons
+    >
+      <!-- Camera -->
+      <a-entity camera></a-entity>
+    </a-scene>
+    <div id="button-div" class="fixed-bottom"></div>
+    <!-- Order summary Boilerplate -->
+    <div class="container">
+      <div id="modal-div" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Order Summary</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+                onclick="closeModal()"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="table-responsive">
+                <table class="table table-condensed">
+                  <thead>
+                    <tr>
+                      <td><strong>Item</strong></td>
+                      <td class="text-center"><strong>Price</strong></td>
+                      <td class="text-center"><strong>Quantity</strong></td>
+                      <td class="text-right"><strong>Total</strong></td>
+                    </tr>
+                  </thead>
+                  <tbody id="bill-table-body">
+                    <!-- foreach ($order->lineItems as $line)  -->
+                    <!-- Your Order summary will comes here  -->
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button id="pay-button" type="button" class="btn btn-primary">
+                Pay Now
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+    <!-- Boilerplate for Ratings Model -->
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js";
+    <div class="container">
+      <div
+        id="rating-modal-div"
+        class="rating-modal"
+        tabindex="-1"
+        role="dialog"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Rate Toy</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+                onclick="closeRatingModal()"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="table-responsive">
+                <input
+                  id="rating-input"
+                  name="rating-input"
+                  class="rating rating-loading"
+                  data-min="0"
+                  data-max="5"
+                  data-step="0.1"
+                  value="0"
+                />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button
+                id="save-rating-button"
+                type="button"
+                class="btn btn-primary"
+              >
+                Submit
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBrYN8pJtCJtTRJ0hG7m0xTQeydSB1eojY",
-      authDomain: "ar-toy-store-8a9a7.firebaseapp.com",
-      projectId: "ar-toy-store-8a9a7",
-      storageBucket: "ar-toy-store-8a9a7.appspot.com",
-      messagingSenderId: "365566992180",
-      appId: "1:365566992180:web:4322fe1e99c55b2f6e0f61"
-    };
-  
-    const app = initializeApp(firebaseConfig);
-  </script>
+    <script>
+      function closeModal() {
+        document.getElementById("modal-div").style.display = "none";
+      }
+    </script>
 
-  <!-- Local StyleSheet -->
-  <link href="./style.css" rel="stylesheet" />
-
-  <!--Js Files-->
-  <script src="./js/markerHandler.js"></script>
-  <script src="./js/addButtons.js"></script>
-
-</head>
-
-<body style="margin : 0px; overflow: hidden;">
-
-  <a-scene id="main-scene" vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; 
-      sourceWidth:1280; sourceHeight:960; 
-      displayWidth: 1280; displayHeight: 960; 
-      debugUIEnabled: false;" gesture-detector create-markers create-buttons>
-
-    <!-- Camera -->
-    <a-entity camera></a-entity>
-
-  <!-- Assets Managment -->
-  <a-assets>
-    <a-asset-item id = "crane" src = "./assests/models/construction_truck/scene.gltf"></a-asset-item>
-  </a-assets>
-
-  <!-- Pattern Marker -->
-  <a-marker id = "crane-marker" type = "pattern" url = "assets/T01/pattern-crane.patt"
-    cursor = "rayOrigin : mouse">
-      
-      <a-entity id = "crane-3d-model" position = "-2.3 0 0.5" scale = "0.05 0.05 0.05" gltf-model = "#crane-model" 
-        gesture-handler></a-entity>
-
-      <a-plane position = "0 0 0" width = "1.5" height = "1.5" rotation = "-90 0 0">
-
-        <a-plane position = "0 0.89 0.02" width = "1.49" height = "0.3" rotation = "0 0 0" color = "#F0C30F">
-
-          <a-entity position = "0 0 0.1" rotation = "0 0 0" 
-          text = "font : monoid ; value : Hydraulic Crane ; color : black ; width : 1.8 ; height : 1 ; align : center"></a-entity>
-
-        </a-plane>
-
-        <a-entity position = "0 0 0.1" rotation = "0 0 0"
-          text = "color : black ; align : center ; width : 2 ; font : monoid ; 
-            value : PULL BACK AND GO : Friction powered/n/crane truck toy , 360-degree rotating /n/left and right, machine can pull up /n/& down, swing left & right . High /n/Qualtiy Material : FunBlast crane toy /n/is made of 100% high-quality abs /n/plastics and mtal shovel which is /n/durable, light and Non-Toxic with /n/ strong crash resistance. /n/AGE : 8-10yrs"></a-entity>
-
-      </a-plane>
-
-  </a-marker>
-</a-scene>
-
-  <!-- Button Main Div -->
-    <div id = "button-div"></div>
-
-</body>
-
+    <script>
+      function closeRatingModal() {
+        document.getElementById("rating-modal-div").style.display = "none";
+      }
+    </script>
+  </body>
 </html>
